--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -5,6 +5,18 @@
     <title>Master Mind Game</title>
   </head>
   <body>
+    <h1 id = 'header'> MASTER MIND!!!</h1>
 
+    <select id="spaces">
+      <option value= 3 >3 Spaces</option>
+      <option value= 4 selected>4 Spaces</option>
+      <option value= 5 >5 Spaces</option>
+    </select>
+
+  <button type = 'button' id = "startGame"> START GAME!</button>
+
+
+
+  <script type = "text/javascript" src = "masterMind.js"></script>
   </body>
 </html>
