--- a/masterm.html
+++ b/masterm.html
@@ -7,7 +7,12 @@
 	<body>
 		<h1>Master Mind Game</h1>
 		<button type="button" name="button">-       Play          -</button>
+<p>
+	<select id="colorSelect">
 
+
+	</select>
+</p>
 
 
 		<script type="text/javascript" src="masterm.js"></script>
