js radom colors update

--- a/victormaster/masterm.html
+++ b/victormaster/masterm.html
@@ -31,7 +31,9 @@
 	</p>
 	<select id="colorSelect">
 
-
+		<option value= "3" >3 Spaces</option>
+		      <option value= "4" selected>4 Spaces</option>
+		      <option value= "5" >5 Spaces</option>
 	</select>
 </p>
 
