Updated JS and added CSS

--- a/ChristyV/MasterMind.html
+++ b/ChristyV/MasterMind.html
@@ -4,17 +4,20 @@
     <meta charset="utf-8">
     <title>MasterMind Game</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="MasterMind.css">
+
   </head>
   <body>
     <h1>The Mastermind Game</h1>
+
     <p>
       <select id="Select Color">
         <option>3 rows</option>
         <option>4 rows</option>
         <option>5 rows</option>
       </select>
-
     </p>
     <button>Start Game!</button>
+  
   </body>
 </html>
