Making some progress

--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -9,17 +9,61 @@
     <h1 id = 'header'> MASTER MIND!!!</h1>
 
     <h4> SELECT GAME DIFFICULTY <h4>
-    <select id="spaces">
-      <option value= 3 >3 Spaces</option>
-      <option value= 4 selected>4 Spaces</option>
-      <option value= 5 >5 Spaces</option>
+    <select id="difficulty">
+      <option value = 3 >3 Spaces</option>
+      <option value = 4 selected>4 Spaces</option>
+      <option value = 5 >5 Spaces</option>
     </select>
     <button type = 'button' id = "startGame"> START GAME!</button>
 
     <table id = 'gameBoard'>
       <h2>REVEAL THE COMPUTERS SECRET CODE<h2>
       <div id = "masterCode">THE ANSWER IS HERE</div>
-
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'y' value = 1></option>
+        <option class = 'g' value = 2></option>
+        <option class = 'b' value = 3></option>
+        <option class = 'r' value = 4></option>
+        <option class = 'p' value = 5></option>
+        <option class = 'o' value = 6></option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'y' value = 1></option>
+        <option class = 'g' value = 2></option>
+        <option class = 'b' value = 3></option>
+        <option class = 'r' value = 4></option>
+        <option class = 'p' value = 5></option>
+        <option class = 'o' value = 6></option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'y' value = 1></option>
+        <option class = 'g' value = 2></option>
+        <option class = 'b' value = 3></option>
+        <option class = 'r' value = 4></option>
+        <option class = 'p' value = 5></option>
+        <option class = 'o' value = 6></option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'y' value = 1></option>
+        <option class = 'g' value = 2></option>
+        <option class = 'b' value = 3></option>
+        <option class = 'r' value = 4></option>
+        <option class = 'p' value = 5></option>
+        <option class = 'o' value = 6></option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'y' value = 1></option>
+        <option class = 'g' value = 2></option>
+        <option class = 'b' value = 3></option>
+        <option class = 'r' value = 4></option>
+        <option class = 'p' value = 5></option>
+        <option class = 'o' value = 6></option>
+      </select>
     </table>
 
   <script type = "text/javascript" src = "masterMind.js"></script>
