--- a/victormaster/masterm.html
+++ b/victormaster/masterm.html
@@ -43,16 +43,31 @@
 </div>
 <hr>
  <div >
-	 <select id="select1" onchange="colourFunction()">
- <option class="yellow" value="A"> yellow</option>
- <option class="green" value="B"> green </option>
- <option class="blue" value="C"> blue</option>
- <option class="red" value="D"> red </option>
- <option class="purple" value="C"> purple</option>
- <option class="orange" value="D"> orange </option>
+	 <select id="select1" >
+ <option class="yellow" value="1"> yellow</option>
+ <option class="green" value="2"> green </option>
+ <option class="blue" value="3"> blue</option>
+ <option class="red" value="4"> red </option>
+ <option class="purple" value="5"> purple</option>
+ <option class="orange" value="6"> orange </option>
+   </select>
+	 <select id="select2" >
+	<option class="yellow" value="1"> yellow</option>
+	<option class="green" value="2"> green </option>
+	<option class="blue" value="3"> blue</option>
+	<option class="red" value="4"> red </option>
+	<option class="purple" value="5"> purple</option>
+	<option class="orange" value="6"> orange </option>
+	 </select>
+	 <select id="select3" >
+ <option class="yellow" value="1"> yellow</option>
+ <option class="green" value="2"> green </option>
+ <option class="blue" value="3"> blue</option>
+ <option class="red" value="4"> red </option>
+ <option class="purple" value="5"> purple</option>
+ <option class="orange" value="6"> orange </option>
+   </select>
 
-
- </select>
  </div>
 
 
