--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -21,48 +21,48 @@
       <div id = "masterCode">THE ANSWER IS HERE</div>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'y' value = 1></option>
-        <option class = 'g' value = 2></option>
-        <option class = 'b' value = 3></option>
-        <option class = 'r' value = 4></option>
-        <option class = 'p' value = 5></option>
-        <option class = 'o' value = 6></option>
+        <option class = 'yellow' value = 1></option>
+        <option class = 'green' value = 2></option>
+        <option class = 'blue' value = 3></option>
+        <option class = 'red' value = 4></option>
+        <option class = 'purple' value = 5></option>
+        <option class = 'orange' value = 6></option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'y' value = 1></option>
-        <option class = 'g' value = 2></option>
-        <option class = 'b' value = 3></option>
-        <option class = 'r' value = 4></option>
-        <option class = 'p' value = 5></option>
-        <option class = 'o' value = 6></option>
+        <option class = 'yellow' value = 1></option>
+        <option class = 'green' value = 2></option>
+        <option class = 'blue' value = 3></option>
+        <option class = 'red' value = 4></option>
+        <option class = 'purple' value = 5></option>
+        <option class = 'orange' value = 6></option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'y' value = 1></option>
-        <option class = 'g' value = 2></option>
-        <option class = 'b' value = 3></option>
-        <option class = 'r' value = 4></option>
-        <option class = 'p' value = 5></option>
-        <option class = 'o' value = 6></option>
+        <option class = 'yellow' value = 1></option>
+        <option class = 'green' value = 2></option>
+        <option class = 'blue' value = 3></option>
+        <option class = 'red' value = 4></option>
+        <option class = 'purple' value = 5></option>
+        <option class = 'orange' value = 6></option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'y' value = 1></option>
-        <option class = 'g' value = 2></option>
-        <option class = 'b' value = 3></option>
-        <option class = 'r' value = 4></option>
-        <option class = 'p' value = 5></option>
-        <option class = 'o' value = 6></option>
+        <option class = 'yellow' value = 1></option>
+        <option class = 'green' value = 2></option>
+        <option class = 'blue' value = 3></option>
+        <option class = 'red' value = 4></option>
+        <option class = 'purple' value = 5></option>
+        <option class = 'orange' value = 6></option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'y' value = 1></option>
-        <option class = 'g' value = 2></option>
-        <option class = 'b' value = 3></option>
-        <option class = 'r' value = 4></option>
-        <option class = 'p' value = 5></option>
-        <option class = 'o' value = 6></option>
+        <option class = 'yellow' value = 1></option>
+        <option class = 'green' value = 2></option>
+        <option class = 'blue' value = 3></option>
+        <option class = 'red' value = 4></option>
+        <option class = 'purple' value = 5></option>
+        <option class = 'orange' value = 6></option>
       </select>
     </table>
 
