--- a/victormaster/masterm.html
+++ b/victormaster/masterm.html
@@ -5,28 +5,28 @@
 		<title>Master Mind Game</title>
 		<link rel="stylesheet" type="text/css" href="masterm.css">
 	</head>
-	<body>
+	<body onload="startGame()">
 		<h1>Master Mind Game</h1>
-		<button type="button" name="button">-       Play          -</button>
+		<button onclick="rdmClrSelec()" type="button" name="button">-       Play          -</button>
 <p>
 	<p>
-		Mastermind - Rules of the game.
+		<strong>Mastermind - Rules of the game.</strong>
 
-
+<br>
 - The computer picks a sequence of colors. The number of colors is the code length. The default code length is 4 but it can be changed when starting a new game.
-
+<br>
 - The objective of the game is to guess the exact positions of the colors in the computer's sequence.
-
+<br>
 - By default, a color can be used only once in a code sequence. If you start a new game with the 'Allow duplicates' checked, then any color can be used any number of times in the code sequence.
-
+<br>
 - After filling a line with your guesses and clicking on the 'Check' button, the computer responses with the result of your guess.
-
+<br>
 - For each color in your guess that is in the correct color and correct position in the code sequence, the computer display a small red color on the right side of the current guess.
-
+<br>
 - For each color in your guess that is in the correct color but is NOT in the correct position in the code sequence, the computer display a small white color on the right side of the current guess.
-
+<br>
 - You win the game when you manage to guess all the colors in the code sequence and when they all in the right position.
-
+<br>
 - You lose the game if you use all attempts without guessing the computer code sequence.
 <h6>Choose Diff </h6>
 	</p>
