--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -16,54 +16,55 @@
     </select>
     <button type = 'button' id = "startGame"> START GAME!</button>
 
-    <table id = 'gameBoard'>
+    <table id = 'guessBoard'>
       <h2>REVEAL THE COMPUTERS SECRET CODE<h2>
       <div id = "masterCode">THE ANSWER IS HERE</div>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = 1></option>
-        <option class = 'green' value = 2></option>
-        <option class = 'blue' value = 3></option>
-        <option class = 'red' value = 4></option>
-        <option class = 'purple' value = 5></option>
-        <option class = 'orange' value = 6></option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = 1></option>
-        <option class = 'green' value = 2></option>
-        <option class = 'blue' value = 3></option>
-        <option class = 'red' value = 4></option>
-        <option class = 'purple' value = 5></option>
-        <option class = 'orange' value = 6></option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = 1></option>
-        <option class = 'green' value = 2></option>
-        <option class = 'blue' value = 3></option>
-        <option class = 'red' value = 4></option>
-        <option class = 'purple' value = 5></option>
-        <option class = 'orange' value = 6></option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = 1></option>
-        <option class = 'green' value = 2></option>
-        <option class = 'blue' value = 3></option>
-        <option class = 'red' value = 4></option>
-        <option class = 'purple' value = 5></option>
-        <option class = 'orange' value = 6></option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
       <select class = 'userSelect'>
         <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = 1></option>
-        <option class = 'green' value = 2></option>
-        <option class = 'blue' value = 3></option>
-        <option class = 'red' value = 4></option>
-        <option class = 'purple' value = 5></option>
-        <option class = 'orange' value = 6></option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
+      <button type="button" id = 'guessButton' disabled> TEST YOUR LUCK </button>
     </table>
 
   <script type = "text/javascript" src = "masterMind.js"></script>
