--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src = "jquery.js"></script>
     <link rel = 'stylesheet' href = 'masterMind.css'/>
+    <!--<link rel = 'stylesheet' href = 'bootstrap.css'/>-->
     <title>Master Mind Game</title>
   </head>
   <body>
@@ -11,62 +13,63 @@
     <h4> SELECT GAME DIFFICULTY <h4>
     <select id="difficulty">
       <option value = 3 >3 Spaces</option>
-      <option value = 4 selected>4 Spaces</option>
-      <option value = 5 >5 Spaces</option>
+      <option value = 4 >4 Spaces</option>
+      <option value = 5 selected>5 Spaces</option>
     </select>
     <button type = 'button' id = "startGame"> START GAME!</button>
 
     <table id = 'guessBoard'>
       <h2>REVEAL THE COMPUTERS SECRET CODE<h2>
       <div id = "masterCode">THE ANSWER IS HERE</div>
-      <select class = 'userSelect'>
-        <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = "yellow">YELLOW</option>
-        <option class = 'green' value = "green">GREEN</option>
-        <option class = 'blue' value = 'blue'>BLUE</option>
-        <option class = 'red' value = 'red'>RED</option>
-        <option class = 'purple' value = 'purple'>PURPLE</option>
-        <option class = 'orange' value = 'orange'>ORANGE</option>
-      </select>
-      <select class = 'userSelect'>
-        <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = "yellow">YELLOW</option>
-        <option class = 'green' value = "green">GREEN</option>
-        <option class = 'blue' value = 'blue'>BLUE</option>
-        <option class = 'red' value = 'red'>RED</option>
-        <option class = 'purple' value = 'purple'>PURPLE</option>
-        <option class = 'orange' value = 'orange'>ORANGE</option>
-      </select>
-      <select class = 'userSelect'>
-        <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = "yellow">YELLOW</option>
-        <option class = 'green' value = "green">GREEN</option>
-        <option class = 'blue' value = 'blue'>BLUE</option>
-        <option class = 'red' value = 'red'>RED</option>
-        <option class = 'purple' value = 'purple'>PURPLE</option>
-        <option class = 'orange' value = 'orange'>ORANGE</option>
-      </select>
-      <select class = 'userSelect'>
-        <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = "yellow">YELLOW</option>
-        <option class = 'green' value = "green">GREEN</option>
-        <option class = 'blue' value = 'blue'>BLUE</option>
-        <option class = 'red' value = 'red'>RED</option>
-        <option class = 'purple' value = 'purple'>PURPLE</option>
-        <option class = 'orange' value = 'orange'>ORANGE</option>
-      </select>
-      <select class = 'userSelect'>
-        <option class = 'start' val = 0>DeCoder</option>
-        <option class = 'yellow' value = "yellow">YELLOW</option>
-        <option class = 'green' value = "green">GREEN</option>
-        <option class = 'blue' value = 'blue'>BLUE</option>
-        <option class = 'red' value = 'red'>RED</option>
-        <option class = 'purple' value = 'purple'>PURPLE</option>
-        <option class = 'orange' value = 'orange'>ORANGE</option>
-      </select>
-      <button type="button" id = 'guessButton' disabled> TEST YOUR LUCK </button>
     </table>
-
-  <script type = "text/javascript" src = "masterMind.js"></script>
+    <form id = 'guessBoard'>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
+      </select>
+      <select class = 'userSelect'>
+        <option class = 'start' val = 0>DeCoder</option>
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
+      </select>
+    </form>  
+      <button type="button" id = 'guessButton' disabled> TEST YOUR LUCK </button>
+    <script type = "text/javascript" src = "masterMind.js"></script>
   </body>
 </html>
