--- a/ChristyV/MasterMind.html
+++ b/ChristyV/MasterMind.html
@@ -18,6 +18,7 @@
       </select>
     </p>
     <button>Start Game!</button>
-  
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script type="text/javascript" src="MasterMind.js"></script>
   </body>
 </html>
