--- a/ChristyV/MasterMind.html
+++ b/ChristyV/MasterMind.html
@@ -17,7 +17,7 @@
         <option>5 rows</option>
       </select>
     </p>
-    <button>Start Game!</button>
+    <button class="start">Start Game!</button>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="MasterMind.js"></script>
   </body>
