Just an update.

--- a/ChristyV/MasterMind.html
+++ b/ChristyV/MasterMind.html
@@ -11,7 +11,7 @@
     <h1>The Mastermind Game</h1>
 
     <p>
-      <select id="Select Color">
+      <select class="Select Color">
         <option>3 rows</option>
         <option>4 rows</option>
         <option>5 rows</option>
