--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <script src = "jquery.js"></script>
+    <link rel = 'stylesheet' href = 'bootstrap.css'/>
     <link rel = 'stylesheet' href = 'masterMind.css'/>
-    <!--<link rel = 'stylesheet' href = 'bootstrap.css'/>-->
     <title>Master Mind Game</title>
   </head>
   <body>
@@ -13,16 +13,17 @@
     <h4> SELECT GAME DIFFICULTY <h4>
     <select id="difficulty">
       <option value = 3 >3 Spaces</option>
-      <option value = 4 >4 Spaces</option>
-      <option value = 1 selected>5 Spaces</option>
+      <option value = 4 selected>4 Spaces</option>
+      <option value = 5 >5 Spaces</option>
     </select>
     <button type = 'button' id = "startGame"> START GAME!</button>
 
     <table id = 'gameBoard'>
       <h2>REVEAL THE COMPUTERS SECRET CODE<h2>
       <div id = "masterCode">THE ANSWER IS HERE</div>
+      <button type="button" id = 'guessButton' disabled> TEST YOUR LUCK </button>
     </table>
-      <select class = 'userSelect' id = 'selectUser1'>
+      <select class = 'userSelect' id = 'selectUser0' >
         <option class = 'yellow' value = "yellow">YELLOW</option>
         <option class = 'green' value = "green">GREEN</option>
         <option class = 'blue' value = 'blue'>BLUE</option>
@@ -30,7 +31,7 @@
         <option class = 'purple' value = 'purple'>PURPLE</option>
         <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
-      <select class = 'userSelect'id = 'selectUser2'>
+      <select class = 'userSelect'id = 'selectUser1' >
         <option class = 'yellow' value = "yellow">YELLOW</option>
         <option class = 'green' value = "green">GREEN</option>
         <option class = 'blue' value = 'blue'>BLUE</option>
@@ -38,7 +39,15 @@
         <option class = 'purple' value = 'purple'>PURPLE</option>
         <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
-      <select class = 'userSelect'id = 'selectUser3'>
+      <select class = 'userSelect'id = 'selectUser2' >
+        <option class = 'yellow' value = "yellow">YELLOW</option>
+        <option class = 'green' value = "green">GREEN</option>
+        <option class = 'blue' value = 'blue'>BLUE</option>
+        <option class = 'red' value = 'red'>RED</option>
+        <option class = 'purple' value = 'purple'>PURPLE</option>
+        <option class = 'orange' value = 'orange'>ORANGE</option>
+      </select>
+      <select class = 'userSelect'id = 'selectUser3' >
         <option class = 'yellow' value = "yellow">YELLOW</option>
         <option class = 'green' value = "green">GREEN</option>
         <option class = 'blue' value = 'blue'>BLUE</option>
@@ -54,15 +63,6 @@
         <option class = 'purple' value = 'purple'>PURPLE</option>
         <option class = 'orange' value = 'orange'>ORANGE</option>
       </select>
-      <select class = 'userSelect'id = 'selectUser5'>
-        <option class = 'yellow' value = "yellow">YELLOW</option>
-        <option class = 'green' value = "green">GREEN</option>
-        <option class = 'blue' value = 'blue'>BLUE</option>
-        <option class = 'red' value = 'red'>RED</option>
-        <option class = 'purple' value = 'purple'>PURPLE</option>
-        <option class = 'orange' value = 'orange'>ORANGE</option>
-      </select>
-      <button type="button" id = 'guessButton' disabled> TEST YOUR LUCK </button>
     <script type = "text/javascript" src = "masterMind.js"></script>
   </body>
 </html>
