--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src = "jquery.js"></script>
+    <script src = "bower_components/jquery/dist/jquery.min.js"></script>
     <link rel = "stylesheet" href = "bootstrap.css"/>
     <link rel = "stylesheet" href = "masterMind.css"/>
     <title>Master Mind Game</title>
