--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <script src = "bower_components/jquery/dist/jquery.min.js"></script>
-    <link rel = "stylesheet" href = "bootstrap.css"/>
-    <link rel = "stylesheet" href = "masterMind.css"/>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="masterMind.css" />
     <title>Master Mind Game</title>
-  </head>
-  <body>
-    <h1 id = "header"> MASTER MIND!!!</h1>
+</head>
+
+<body>
+    <h1 id="header"> MASTER MIND!!!</h1>
 
     <h4> SELECT GAME DIFFICULTY </h4>
     <select id="difficulty">
@@ -16,14 +17,14 @@
       <option value = "4" selected>4 Spaces</option>
       <option value = "5" >5 Spaces</option>
     </select>
-    <button type = "button" id = "startGame"> START GAME!</button>
+    <button type="button" id="startGame"> START GAME!</button>
 
-    <table id = "gameBoard">
-      <h2>REVEAL THE COMPUTERS SECRET CODE</h2>
-      <div id = "masterCode">THE ANSWER IS HERE</div>
-      <button type="button" id = "guessButton" disabled> TEST YOUR LUCK </button>
+    <table id="gameBoard">
+        <h2>REVEAL THE COMPUTERS SECRET CODE</h2>
+        <div id="masterCode">THE ANSWER IS HERE</div>
+        <button type="button" id="guessButton" disabled> TEST YOUR LUCK </button>
     </table>
-      <select class = "userSelect" id = "selectUser0" >
+    <select class="userSelect" id="selectUser0">
         <option class = "yellow" value = "yellow">YELLOW</option>
         <option class = "green" value = "green">GREEN</option>
         <option class = "blue" value = "blue">BLUE</option>
@@ -31,7 +32,7 @@
         <option class = "purple" value = "purple">PURPLE</option>
         <option class = "orange" value = "orange">ORANGE</option>
       </select>
-      <select class = "userSelect" id = "selectUser1" >
+    <select class="userSelect" id="selectUser1">
         <option class = "yellow" value = "yellow">YELLOW</option>
         <option class = "green" value = "green">GREEN</option>
         <option class = "blue" value = "blue">BLUE</option>
@@ -39,7 +40,7 @@
         <option class = "purple" value = "purple">PURPLE</option>
         <option class = "orange" value = "orange">ORANGE</option>
       </select>
-      <select class = "userSelect" id = "selectUser2" >
+    <select class="userSelect" id="selectUser2">
         <option class = "yellow" value = "yellow">YELLOW</option>
         <option class = "green" value = "green">GREEN</option>
         <option class = "blue" value = "blue">BLUE</option>
@@ -47,7 +48,7 @@
         <option class = "purple" value = "purple">PURPLE</option>
         <option class = "orange" value = "orange">ORANGE</option>
       </select>
-      <select class = "userSelect" id = "selectUser3" >
+    <select class="userSelect" id="selectUser3">
         <option class = "yellow" value = "yellow">YELLOW</option>
         <option class = "green" value = "green">GREEN</option>
         <option class = "blue" value = "blue">BLUE</option>
@@ -55,7 +56,7 @@
         <option class = "purple" value = "purple">PURPLE</option>
         <option class = "orange" value = "orange">ORANGE</option>
       </select>
-      <select class = "userSelect" id = "selectUser4">
+    <select class="userSelect" id="selectUser4">
         <option class = "yellow" value = "yellow">YELLOW</option>
         <option class = "green" value = "green">GREEN</option>
         <option class = "blue" value = "blue">BLUE</option>
@@ -63,6 +64,9 @@
         <option class = "purple" value = "purple">PURPLE</option>
         <option class = "orange" value = "orange">ORANGE</option>
       </select>
-    <script type = "text/javascript" src = "masterMind.js"></script>
-  </body>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="masterMind.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+
 </html>
