--- a/MasterMindMatt/masterMind.html
+++ b/MasterMindMatt/masterMind.html
@@ -64,6 +64,8 @@
         <option class = "purple" value = "purple">PURPLE</option>
         <option class = "orange" value = "orange">ORANGE</option>
       </select>
+      <table>
+      </table>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="masterMind.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
